--- a/bicicletaria.html
+++ b/bicicletaria.html
@@ -1,9 +1,10 @@
-h1>Bicicletaria Galvão !DOCTYPE html>h1>
+<h1>Bicicletaria Galvão
+   
 <h1 class=""></h1>
            sempre fornecendo o melhor para
                        o cliente
 
-<p>stamos localizados na av.Brasil n°1070<estrong>
+<p>estamos localizados na av.Brasil n°1070 </p>
 <p>estamos no mercado para trazer as bicicletas esportivas  de extrema confiança
 
 <p>Fundada em 2001, a bicicleta é referência nas redondezas.
@@ -12,9 +13,12 @@ h1>Bicicletaria Galvão !DOCTYPE html>h1>
 <p>Bicicleta aro 26 por 890,00 na promoção</p>
 <p>Bicicleta aro 20 por 700,00</p>
 
-<p><strong> como viking por 1.650;00 </strong</p>
+<p>como viking por 1.650;00</p>
+</p>
 <p>hupi naja que são difíceis de se achar e por 6.500,00</p>
 
 <p>Além dos acessórios que são de boa  qualidade e de um preço acessível para todo o consumidor</p>
 
 entrar em contato;41 8947-7638
+<body bgcolor="2dd9d0"></body>
+<img src="D_NQ_NP_865567-MLB42665491001_072020-O (1).jpg">
