--- a/bicicletaria.html
+++ b/bicicletaria.html
@@ -20,5 +20,5 @@
 <p>Além dos acessórios que são de boa  qualidade e de um preço acessível para todo o consumidor</p>
 
 entrar em contato;41 8947-7638
-<body bgcolor="2dd9d0"></body>
+<body bgcolor=' #C0C0C0 (192,192,192)'> </body>
 <img src="D_NQ_NP_865567-MLB42665491001_072020-O (1).jpg">
