--- a/bicicletaria.html
+++ b/bicicletaria.html
@@ -21,4 +21,4 @@
 
 entrar em contato;41 8947-7638
 <body bgcolor=' #C0C0C0 (192,192,192)'> </body>
-<img src="D_NQ_NP_865567-MLB42665491001_072020-O (1).jpg">
+<img src="foto.jpg">
